--- a/tests/main/interfaces-hardware-random-control/task.yaml
+++ b/tests/main/interfaces-hardware-random-control/task.yaml
@@ -10,6 +10,9 @@ summary: |
     A snap declaring a plug on this interface must be able to read files in
     /sys/class/misc/hw_random/{rng_available,rng_current}
 
+# Execution skipped on debian due to device /dev/hwrng not created by default
+systems: [-debian-unstable-*]
+
 prepare: |
     echo "Given a snap declaring a plug on the hardware-random-control interface is installed"
     snap try $TESTSLIB/snaps/test-snapd-hardware-random-control
