--- a/tests/main/security-device-cgroups-classic/task.yaml
+++ b/tests/main/security-device-cgroups-classic/task.yaml
@@ -5,7 +5,7 @@ details: |
     sure that other devices are still accessible (ie, the cgroup is not in
     effect).
 
-systems: [-fedora-*, -opensuse-*]
+systems: [-fedora-*, -opensuse-*, -ubuntu-core-*]
 
 prepare: |
     # Create framebuffer device node and give it some content we can verify
