tests: run tests on more systems
Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tests/main/security-device-cgroups-jailmode/task.yaml
+++ b/tests/main/security-device-cgroups-jailmode/task.yaml
@@ -5,6 +5,7 @@ details: |
     sure that other devices not included in the snap's plugged interfaces are
     still accessible (ie, the cgroup is not in effect).
 
+# None of those systems support strict confinement which is required to formally enable jailmode.
 systems: [-fedora-*, -opensuse-*, -debian-unstable-*]
 
 prepare: |
