--- a/tests/main/security-device-cgroups-classic/task.yaml
+++ b/tests/main/security-device-cgroups-classic/task.yaml
@@ -5,7 +5,9 @@ details: |
     sure that other devices are still accessible (ie, the cgroup is not in
     effect).
 
-systems: [-fedora-*, -opensuse-*, -ubuntu-core-*]
+# Disabled on Fedora and Ubuntu Core because they don't support classic
+# confinement.
+systems: [-fedora-*, -ubuntu-core-*]
 
 prepare: |
     # Create framebuffer device node and give it some content we can verify
