Disable snapctl stop/start/restart.

--- a/tests/main/snapctl-services/task.yaml
+++ b/tests/main/snapctl-services/task.yaml
@@ -8,6 +8,8 @@ restore: |
     rm -f $SERVICEOPTIONFILE
 
 execute: |
+    echo "The test is disabled for now until the functionality is restored"
+    exit 0
 
     wait_for_service() {
         retry=5
