--- a/tests/main/interfaces-network-setup-observe/task.yaml
+++ b/tests/main/interfaces-network-setup-observe/task.yaml
@@ -1,7 +1,7 @@
 summary: Ensure that the desktop interface works.
 
 details: |
-    The network setup control interface allows to access the different netplan
+    The network setup observe interface allows to access the different netplan
     configuration files.
 
     The test uses the test-snapd-check-fs-access snap to checks files and dirs
@@ -9,12 +9,12 @@ details: |
 
 prepare: |
     echo "Given the test-snapd-check-fs-access snap is installed"
-    cp -rf $TESTSLIB/snaps/test-snapd-check-fs-access /tmp/test-snapd-check-fs-access
-    sed 's/\[\]/\[network-setup-control\]/g' -i /tmp/test-snapd-check-fs-access/meta/snap.yaml
-    snap try /tmp/test-snapd-check-fs-access
+    cp $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml.orig
+    sed 's/\[\]/\[network-setup-observe\]/g' -i $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml
+    snap try $TESTSLIB/snaps/test-snapd-check-fs-access
 
 restore: |
-    rm -rf /tmp/test-snapd-check-fs-access
+    cp $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml.orig $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml
 
 execute: |
     CONNECTED_PATTERN=":network-setup-observe +test-snapd-check-fs-access"
