--- a/tests/main/snap-info/task.yaml
+++ b/tests/main/snap-info/task.yaml
@@ -26,3 +26,4 @@ execute: |
 
     snap info --verbose $TESTSLIB/snaps/basic-desktop
     snap info --verbose basic_1.0_all.snap|MATCH "sha3-384:"
+    snap info --verbose test-snapd-tools|MATCH "  ignore-validation:"
