tests/unit/c-unit-tests: rename to unit-tests-gcc to indicate that tests are gcc specific
Rename the test to indicate that it is GCC specific

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/unit/c-unit-tests-gcc/task.yaml
+++ b/tests/unit/c-unit-tests-gcc/task.yaml
@@ -1,4 +1,4 @@
-summary: Run the test suite for C code
+summary: Build the test suite for C code using gcc and run it
 prepare: |
     # Sanity check, the core snap is installed
     snap info core | MATCH "installed:"
