cmd: make enabled C compiler warnings become error when building with unit tests
This will allow us to catch warnings as part of CI pipeline

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -9,6 +9,12 @@ noinst_LIBRARIES =
 
 CHECK_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes \
 	-Wno-missing-field-initializers -Wno-unused-parameter
+
+# Make all warnings errors when building for unit tests
+if WITH_UNIT_TESTS
+CHECK_CFLAGS += -Werror
+endif
+
 subdirs = snap-confine snap-discard-ns system-shutdown libsnap-confine-private
 
 # Run check-syntax when checking
