tests/unit/c-unit-tests-{gcc,clang}: refactor execute step to use autogen.sh
Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/unit/c-unit-tests-clang/task.yaml
+++ b/tests/unit/c-unit-tests-clang/task.yaml
@@ -11,18 +11,10 @@ prepare: |
     . "$TESTSLIB/pkgdb.sh"
     distro_install_package clang
 execute: |
-    # Refresh autotools build system
     cd "$SPREAD_PATH/cmd/"
-    autoreconf --install --force
-    # Do an out-of-tree build in the autogarbage directory
-    mkdir -p "$SPREAD_PATH/cmd/autogarbage"
-    cd "$SPREAD_PATH/cmd/autogarbage"
-    EXTRA_CONF=
-    if [ ! -d /sys/kernel/security/apparmor ]; then
-        EXTRA_CONF="--disable-apparmor --disable-seccomp"
-    fi
-    CC=clang "$SPREAD_PATH/cmd/configure" \
-        --prefix=/usr --libexecdir=/usr/lib/snapd --enable-nvidia-ubuntu $EXTRA_CONF
+    build_dir="$SPREAD_PATH/cmd/autogarbage"
+    BUILD_DIR=$build_dir CC=clang ./autogen.sh
+    cd $build_dir
     # Build and run unit tests
     make check
 restore: |
