--- a/tests/unit/c-unit-tests-gcc/task.yaml
+++ b/tests/unit/c-unit-tests-gcc/task.yaml
@@ -8,18 +8,10 @@ prepare: |
     rm -rf "$SPREAD_PATH/cmd/"{autom4te.cache,configure,test-driver,config.status,config.guess,config.sub,config.h.in,compile,install-sh,depcomp,build,missing,aclocal.m4,Makefile,Makefile.in}
     make -C "$SPREAD_PATH/cmd" distclean || true
 execute: |
-    # Refresh autotools build system
     cd "$SPREAD_PATH/cmd/"
-    autoreconf --install --force
-    # Do an out-of-tree build in the autogarbage directory
-    mkdir -p "$SPREAD_PATH/cmd/autogarbage"
-    cd "$SPREAD_PATH/cmd/autogarbage"
-    EXTRA_CONF=
-    if [ ! -d /sys/kernel/security/apparmor ]; then
-        EXTRA_CONF="--disable-apparmor --disable-seccomp"
-    fi
-    "$SPREAD_PATH/cmd/configure" \
-        --prefix=/usr --libexecdir=/usr/lib/snapd --enable-nvidia-ubuntu $EXTRA_CONF
+    build_dir="$SPREAD_PATH/cmd/autogarbage"
+    BUILD_DIR=$build_dir ./autogen.sh
+    cd $build_dir
     # Build and run unit tests
     make check
 restore: |
