--- a/tests/main/interfaces-physical-memory-observe/task.yaml
+++ b/tests/main/interfaces-physical-memory-observe/task.yaml
@@ -10,6 +10,9 @@ prepare: |
     echo "Given the physical-memory-observe snap is installed"
     snap try $TESTSLIB/snaps/test-snapd-physical-memory-observe
 
+restore: |
+    rm -f call.error
+
 execute: |
     CONNECTED_PATTERN=":physical-memory-observe +test-snapd-physical-memory-observe"
     DISCONNECTED_PATTERN="\- +test-snapd-physical-memory-observe:physical-memory-observe"
