--- a/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-policy-app-provider-core/meta/snap.yaml
@@ -1,10 +1,13 @@
-name: test-policy-app-provider-classic
+name: test-snapd-policy-app-provider-core
 version: 1.0
 summary: Test policy app for providing slot interface policy from snapd
-description: Test policy app for non-implicitOnClassic slots
+description: Test policy app for non-implicitOnCore slots
 confinement: strict
 
 slots:
+  avahi-control: null
+  avahi-observe: null
+  bluez: null
   content-read:
     interface: content
     content: test-content
@@ -18,24 +21,39 @@ slots:
     interface: dbus
     bus: system
     name: test.system
+  docker: null
+  fwupd: null
   location-control: null
   location-observe: null
   lxd: null
   maliit: null
   media-hub: null
   mir: null
-  mpris:
-    name: test-policy-app-provider-classic
+  modem-manager: null
+  network-manager: null
   network-status: null
+  ofono: null
   online-accounts-service: null
+  pulseaudio: null
   storage-framework-service: null
   thumbnailer-service: null
   ubuntu-download-manager: null
+  udisks2: null
   unity8: null
   unity8-calendar: null
   unity8-contacts: null
+  upower-observe: null
 
 apps:
+  avahi-control:
+    command: bin/run
+    slots: [ avahi-control ]
+  avahi-observe:
+    command: bin/run
+    slots: [ avahi-observe ]
+  bluez:
+    command: bin/run
+    slots: [ bluez ]
   content-read:
     command: bin/run
     slots: [ content-read ]
@@ -48,6 +66,9 @@ apps:
   docker:
     command: bin/run
     slots: [ docker ]
+  fwupd:
+    command: bin/run
+    slots: [ fwupd ]
   location-control:
     command: bin/run
     slots: [ location-control ]
@@ -66,15 +87,24 @@ apps:
   mir:
     command: bin/run
     slots: [ mir ]
-  mpris:
+  modem-manager:
     command: bin/run
-    slots: [ mpris ]
+    slots: [ modem-manager ]
+  network-manager:
+    command: bin/run
+    slots: [ network-manager ]
   network-status:
     command: bin/run
     slots: [ network-status ]
+  ofono:
+    command: bin/run
+    slots: [ ofono ]
   online-accounts-service:
     command: bin/run
     slots: [ online-accounts-service ]
+  pulseaudio:
+    command: bin/run
+    slots: [ pulseaudio ]
   storage-framework-service:
     command: bin/run
     slots: [ storage-framework-service ]
@@ -84,6 +114,9 @@ apps:
   ubuntu-download-manager:
     command: bin/run
     slots: [ ubuntu-download-manager ]
+  udisks2:
+    command: bin/run
+    slots: [ udisks2 ]
   unity8:
     command: bin/run
     slots: [ unity8 ]
@@ -93,3 +126,6 @@ apps:
   unity8-contacts:
     command: bin/run
     slots: [ unity8-contacts ]
+  upower-observe:
+    command: bin/run
+    slots: [ upower-observe ]
