--- a/tests/main/interfaces-physical-memory-observe/task.yaml
+++ b/tests/main/interfaces-physical-memory-observe/task.yaml
@@ -6,6 +6,10 @@ details: |
     The test-snapd-physical-memory-observe snap checks that /dev/mem can be read
     and the interface can be connected and disconnected. 
 
+# As the ubuntu kernels are configured with CONFIG_STRICT_DEVMEM=y, this interface is
+# validated just in the other supported systems.
+systems: [-ubuntu-*]
+
 prepare: |
     echo "Given the physical-memory-observe snap is installed"
     snap try $TESTSLIB/snaps/test-snapd-physical-memory-observe
