cmd/snap-confine: Ensure snap-confine is allowed to access os-release
This dupes the existing rule and fixes a regression on Solus where we
see a denial for the os-release file.

Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/cmd/snap-confine/snap-confine.apparmor.in
+++ b/cmd/snap-confine/snap-confine.apparmor.in
@@ -213,6 +213,9 @@
     umount /var/lib/snapd/hostfs/proc/,
     mount options=(rw rslave) -> /var/lib/snapd/hostfs/,
 
+    # Allow reading the os-release file (possibly a symlink to /usr/lib).
+    /{etc/,usr/lib/}os-release r,
+
     # set up snap-specific private /tmp dir
     capability chown,
     /tmp/ w,
