--- a/tests/main/set-proxy-store/task.yaml
+++ b/tests/main/set-proxy-store/task.yaml
@@ -1,13 +1,11 @@
 summary: Check that the setting proxy.store config works
+systems: [-ubuntu-core-16-*]
 environment:
     SNAP_NAME: test-snapd-tools
     SNAP_VERSION_PATTERN: \d+\.\d+\+fake1
     BLOB_DIR: $(pwd)/fake-store-blobdir
 
 prepare: |
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-16-* ]]; then
-        exit
-    fi
     if [ "$TRUST_TEST_KEYS" = "false" ]; then
         echo "This test needs test keys to be trusted"
         exit
@@ -39,9 +37,6 @@ prepare: |
 restore: |
     rm -f fake.store
     rm -f stderr.out
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-16-* ]]; then
-         exit
-    fi
     if [ "$TRUST_TEST_KEYS" = "false" ]; then
         echo "This test needs test keys to be trusted"
         exit
@@ -53,9 +48,6 @@ restore: |
     teardown_fake_store $BLOB_DIR
 
 execute: |
-    if [[ "$SPREAD_SYSTEM" == ubuntu-core-16-* ]]; then
-         exit
-    fi
     if [ "$TRUST_TEST_KEYS" = "false" ]; then
         echo "This test needs test keys to be trusted"
         exit
