packaging/arch: remove system-shutdown and snapd.autoimport.service
Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -161,11 +161,13 @@ package_snapd-git() {
 
   # Remove snappy core specific units
   rm -fv "$pkgdir/usr/lib/systemd/system/snapd.system-shutdown.service"
+  rm -fv "$pkgdir/usr/lib/systemd/system/snapd.autoimport.service"
   rm -fv "$pkgdir"/usr/lib/systemd/system/snapd.snap-repair.*
   rm -fv "$pkgdir"/usr/lib/systemd/system/snapd.core-fixup.*
   # and scripts
   rm -fv "$pkgdir/usr/lib/snapd/snapd.core-fixup.sh"
   rm -fv "$pkgdir/usr/bin/ubuntu-core-launcher"
+  rm -fv "$pkgdir/usr/lib/snapd/system-shutdown"
 
 
   # Install the bash tab completion files
