tests: adjust test to match stderr
Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tests/main/interfaces-network-control-tuntap/task.yaml
+++ b/tests/main/interfaces-network-control-tuntap/task.yaml
@@ -28,7 +28,7 @@ execute: |
 
     if [ "$(snap debug confinement)" = strict ] ; then
         echo "And cannot allocate the $DEV device"
-        test-snapd-tuntap.tuntap $DEV | MATCH "Permission denied"
+        test-snapd-tuntap.tuntap $DEV 2>&1 | MATCH "Permission denied"
     fi
 
     echo "When the plug is connected"
