many:  adjusts text in /snap/README
Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tests/main/snap-readme/task.yaml
+++ b/tests/main/snap-readme/task.yaml
@@ -7,4 +7,4 @@ details: >
 execute: |
     snap version # To ensure that snapd is awake
     . $TESTSLIB/dirs.sh
-    MATCH "For more information please visit: https://forum.snapcraft.io/t/the-snap-directory/" "$SNAP_MOUNT_DIR/README"
+    MATCH "https://forum.snapcraft.io/t/the-snap-directory/2817" "$SNAP_MOUNT_DIR/README"
