All the tests using the same generic snap

--- a/tests/main/interfaces-timeserver-control/task.yaml
+++ b/tests/main/interfaces-timeserver-control/task.yaml
@@ -43,8 +43,9 @@ execute: |
     snap interfaces | MATCH "$CONNECTED_PATTERN"
     snap connect test-snapd-check-fs-access:timeserver-control
 
-    # Write access to /usr/share/zoneinfo should be possible
-    test-snapd-check-fs-access.write-file /etc/systemd/timesyncd.conf
+    # Read access to /usr/share/zoneinfo should be possible
+    # Write access Won't work until LP: #1504657 is fixed. Requires reboot until timesyncd notices the change or systemd restarts it.
+    test-snapd-check-fs-access.read-file /etc/systemd/timesyncd.conf
 
     # Set the ntp value and check the status
     test-snapd-timedate-control-consumer.timedatectl set-ntp yes
@@ -53,7 +54,7 @@ execute: |
     # Set the ntp value and check the status
     test-snapd-timedate-control-consumer.timedatectl set-ntp no
     [ "$(timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "no" ]
-    [ "$(test-snapd-timedate-control-consumer.timedatectl status | grep 'Time zone:' | sed 's/.*Time zone: \(.*\) (.*)/\1/')" = "no" ]
+    [ "$(test-snapd-timedate-control-consumer.timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "no" ]
 
     # Disconnect the interface and check access to timedatectl status
     snap disconnect test-snapd-timedate-control-consumer:timeserver-control
