--- a/tests/lib/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml
@@ -7,4 +7,7 @@ apps:
     timedatectl:
         command: bin/timedatectl
         plugs: [] #timedate
+    hwclock:
+        command: bin/hwclock
+        plugs: [] #hwclock
 
